--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -3,19 +3,19 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-  color: #ff0b3a;
+  color: #000;
   padding-top: 50px;
 }
 
 a {
-  color: #ff0b3a;
-  border-bottom: 2px solid #ff0b3a;
+  color: #000;
+  border-bottom: 2px solid #000;
 }
 
 a:not(.btn):hover, a:focus {
-  color: #ff0b3a;
+  color: #000;
   text-decoration: none;
-  border-bottom: 2px solid #ff0b3a;
+  border-bottom: 2px solid #000;
 }
 
 .navbar a {
@@ -39,7 +39,7 @@ a:not(.btn):hover, a:focus {
 }
 
 .navbar-toggle {
-  background-color: #ff0b3a !important;
+  background-color: #000 !important;
 }
 
 .navbar-toggle .icon-bar {
@@ -47,7 +47,7 @@ a:not(.btn):hover, a:focus {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  border-top: 0.2em solid #ff0b3a;
+  border-top: 0.2em solid #000;
   padding-top: 10px;
 }
 
@@ -63,11 +63,11 @@ h3 {font-size: 2.25em;}
 h4 {font-size: 1.5em;}
 
 .table > thead > tr > th {
-  border-bottom: 2px solid #ff0b3a;
+  border-bottom: 2px solid #000;
 }
 
 .table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td {
-  border-top: 1px solid #ff0b3a;
+  border-top: 1px solid #000;
   vertical-align: center;
   // padding: 8px 0;
   padding-left: 0;
@@ -81,9 +81,9 @@ table tbody tr td:last-child, table thead tr td:last-child  {
 
 .form-control {
   border-radius: 0 !important;
-  border: 1px solid #ff0b3a;
+  border: 1px solid #000;
   box-shadow: none;
-  color: #ff0b3a;
+  color: #000;
 }
 
 .form-check-box {
@@ -92,14 +92,14 @@ table tbody tr td:last-child, table thead tr td:last-child  {
 
 .btn {
   border-radius: 0 !important;
-  border: 1px solid #ff0b3a;
-  color: #ff0b3a;
-  border-color: #ff0b3a !important;
+  border: 1px solid #000;
+  color: #000;
+  border-color: #000 !important;
 }
 
 .btn:hover {
   color: #fff;
-  background-color: #ff0b3a;
+  background-color: #000;
   box-shadow: none;
 }
 
@@ -108,19 +108,19 @@ table tbody tr td:last-child, table thead tr td:last-child  {
 }
 
 .btn-danger:hover {
-  color: #ff0b3a;
+  color: #000;
   background-color: #fff;
 }
 
 *:focus {
-  border-color: #ff0b3a !important;
+  border-color: #000 !important;
   box-shadow: none !important;
   outline: none !important;
 }
 
 .dropdown a {
   border: none;
-  color: #ff0b3a !important;
+  color: #000 !important;
 }
 
 .nav .dropdown .dropdown-menu {
@@ -146,19 +146,19 @@ table tbody tr td:last-child, table thead tr td:last-child  {
 }
 
 .jumbotron {
-  border: 1px solid #ff0b3a;
+  border: 1px solid #000;
   border-radius: 0 !important;
   background-color: transparent;
 }
 
 code {
-  color: #ff0b3a;
+  color: #000;
   background-color: rgba(255,11,58, 0.1);
   border-radius: 0;
 }
 
 small {
-  color: #ff0b3a !important;
+  color: #000 !important;
 }
 
 // custom
@@ -229,7 +229,7 @@ small {
 }
 
 .klax-line-selected, .klax-line-selected a {
-  background-color: #ff0b3a !important;
+  background-color: #000 !important;
   color: #fff !important;
 }
 
@@ -295,10 +295,10 @@ small {
 .klax-hero {
   margin-top: -50px;
   padding-top: 50px;
-  background-color: #ff0b3a;
+  background-color: #fff;
   height: 100vh;
   min-height: 900px;
-  color: #fff;
+  color: #000;
   .form-group-lg .form-control {
     height: 45px;
     background-color: transparent;
@@ -312,7 +312,7 @@ small {
   }
   .btn:hover {
     background-color: white;
-    color: #ff0b3a !important;
+    color: #000 !important;
   }
   p, h1 {
     text-align: center;
@@ -333,4 +333,3 @@ small {
     display: none;
   }
 }
-
