--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -295,10 +295,10 @@ small {
 .klax-hero {
   margin-top: -50px;
   padding-top: 50px;
-  background-color: #fff;
+  background-color: #000;
   height: 100vh;
   min-height: 900px;
-  color: #000;
+  color: #fff;
   .form-group-lg .form-control {
     height: 45px;
     background-color: transparent;
