--- a/app/views/changes/page.html.erb
+++ b/app/views/changes/page.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-md-6">
-        <p class="lead">Below are two versions of <b><%= @page&.name || @page&.url %></b> which has changed <%= @page.num_changes %> times since <%= @page.created_at.strftime("%A, %B %d, %Y") %> when <%= @page&.user&.display_name || 'someone' %> began watching it.</p>
+        <p class="lead">Below are two versions of <b><%= @page&.name || @page&.url %></b> which has changed <%= @page.num_changes %> times since <%= @page.created_at.strftime("%A, %B %d, %Y") %> when we began watching it.</p>
       </div>
       <div class="col-md-3">
         <!-- negative space -->
