hide nav if not logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
 </head>
 <body class="<%= yield(:body_classes) %>">
 
+<% if user.present? %>
 <%= render partial: 'layouts/nav' %>
+<% end %>
 
 <%= yield %>
 
