try to fix user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 </head>
 <body class="<%= yield(:body_classes) %>">
 
-<% if user.present? %>
+<% if @user.present? %>
 <%= render partial: 'layouts/nav' %>
 <% end %>
 
