--- a/app/views/changes/page.html.erb
+++ b/app/views/changes/page.html.erb
@@ -13,11 +13,11 @@
         <!-- negative space -->
       </div>
       <div class="col-md-3">
-        <% if user.present? %>
+        <% if @user.present? %>
         <%= link_to 'Past Snapshots', snapshots_page_path(@page), class: 'btn btn-default btn-lg btn-block' %>
         <% end %>
         <%= link_to 'Go to Source', @page.url, class: 'btn btn-default btn-lg btn-block' %>
-        <% if user.present? %>
+        <% if @user.present? %>
         <%= link_to 'Edit', edit_page_path(@page), class: 'btn btn-default btn-lg btn-block' %>
         <% end %>
       </div>
@@ -37,7 +37,7 @@
         <label class="col-sm-1">What changed?</label>
         <div class="col-md-11">
           <div class="input-group">
-            <% if user.present? %>
+            <% if @user.present? %>
             <%= f.text_field :summary, label: false, class: 'form-control' %>
             <span class="input-group-btn">
               <%= f.button :submit, 'Save', class: "btn btn-default btn-lg btn-block form-control" %>
